<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	
	<artifactId>repos-indexing-fulltext</artifactId>
	<version>0.40.0-SNAPSHOT</version>
	<packaging>jar</packaging>
	
	<name>Repos Indexing - Fulltext</name>
	<url>http://www.repos.se/</url>
	
	<parent>
		<groupId>se.repos</groupId>
		<artifactId>maven-parent</artifactId>
		<version>11.0.2</version>
		<relativePath/>
	</parent>
	
	<scm>
		<developerConnection>scm:svn:https://labs.repos.se/svn/${project.artifactId}/trunk</developerConnection>
		<tag>HEAD</tag>
	</scm>

	<issueManagement>
		<system>Trac</system>
		<url>https://labs.repos.se/trac/</url>
	</issueManagement>

	<repositories>
		<repository>
			<id>repos.open.repo</id>
			<name>Simonsoft / Repos Open Repository</name>
			<url>http://opensource.simonsoft.se/maven/</url>
		</repository>		
	</repositories>

	<properties>
		<quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
		<quarkus.platform.group-id>io.quarkus</quarkus.platform.group-id>
		<quarkus.platform.version>3.39.2</quarkus.platform.version>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
		<mockito-version>5.21.0</mockito-version>
		<surefire-plugin.version>3.2.5</surefire-plugin.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>${quarkus.platform.group-id}</groupId>
				<artifactId>${quarkus.platform.artifact-id}</artifactId>
				<version>${quarkus.platform.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>${project.groupId}</groupId>
			<artifactId>repos-indexing</artifactId>
			<version>0.40.0-SNAPSHOT</version>
		</dependency>
		
		<!-- Keep Tika 1.25 for releases 2022 Q1-Q2. -->
		<!-- TODO: Upgrade to Tika 2.x after releases 2022 Q1-Q2. -->
		<dependency>
			<groupId>org.apache.tika</groupId>
			<artifactId>tika-parsers</artifactId>
			<version>1.25</version>
			<exclusions>
                <exclusion>
                    <groupId>org.apache.cxf</groupId>
                    <artifactId>cxf-rt-rs-client</artifactId>
                </exclusion>
                <!-- "The package org.w3c.dom is accessible from more than one module..." -->
                <!-- https://stackoverflow.com/a/63456316-->
                <exclusion>
                	<groupId>xml-apis</groupId>
                	<artifactId>xml-apis</artifactId>
            	</exclusion>
            </exclusions>
		</dependency>
		<dependency>
			<groupId>org.apache.tika</groupId>
			<artifactId>tika-xmp</artifactId>
			<version>1.25</version>
		</dependency>		
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>${mockito-version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.quarkus</groupId>
			<artifactId>quarkus-junit</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.vintage</groupId>
			<artifactId>junit-vintage-engine</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<testResources>
			<testResource>
				<directory>src/test/resources</directory>
			</testResource>
			<!-- Solr Dev Service expects the core layout as classpath:/solr. Reuse repos-indexing's repositem core config instead of duplicating it here. -->
			<testResource>
				<directory>../repos-indexing/src/main/resources/se/repos/indexing/solr/repositem</directory>
				<targetPath>solr</targetPath>
			</testResource>
		</testResources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${surefire-plugin.version}</version>
				<configuration>
					<argLine>
						-Djava.util.logging.manager=org.jboss.logmanager.LogManager
						--add-opens java.base/java.lang=ALL-UNNAMED
						--add-opens java.base/java.lang.invoke=ALL-UNNAMED
						-XX:+EnableDynamicAgentLoading
					</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>
	
</project>
